Fix relative paths for login, register, and redirection links in HTML and JavaScript files.

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                     <li><a href="#about">About</a></li>
                 </ul>
                 <div class="nav-actions">
-                    <a href="../user/auth/login/login.html" class="btn btn-primary">Login</a>
-                    <a href="../user/auth/register/register.html" class="btn btn-secondary">Register</a>
+                    <a href="user/auth/login/login.html" class="btn btn-primary">Login</a>
+                    <a href="user/auth/register/register.html" class="btn btn-secondary">Register</a>
                 </div>
             </div>
             <button class="menu-toggle" id="menu-toggle">
@@ -269,7 +269,7 @@
         <div class="container">
             <h1>Efficient Surgical Scheduling, Simplified</h1>
             <p>OpScheduler brings clarity and control to hospital operating rooms. Seamlessly manage schedules, coordinate staff, and ensure patients receive timely care.</p>
-            <a href="../user/auth/register/register.html" class="btn btn-primary">Get Started Today</a>
+            <a href="user/auth/register/register.html" class="btn btn-primary">Get Started Today</a>
         </div>
     </section>
 
